# online-cinema-api

./: .env.sample  .gitignore  docker-compose-dev.yml  pyproject.toml
src/: main.py
src/core/: config.py
src/database/: session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 6fccc937ec7d_test.py
src/modules/users/: models.py
